--- a/deltanetbackend-Desa/src/main/resources/application.properties
+++ b/deltanetbackend-Desa/src/main/resources/application.properties
@@ -4,9 +4,9 @@ server.port=8085
 #logging.level.org.hibernate.SQL=debug
 
 #----Base de Datos
-spring.datasource.url=jdbc:mysql://127.0.0.1:3306/deltanet_prod?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=America/Lima
-spring.datasource.username=root
-spring.datasource.password=Delta123root
+spring.datasource.url=jdbc:mysql://161.132.202.110:3306/deltanet?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=America/Lima
+spring.datasource.username=szavala
+spring.datasource.password=Szavala@1507
 # spring.datasource.hikari.maximumPoolSize=100
 # spring.datasource.hikari.maxLifetime=600000
 spring.jpa.show-sql=true
